--- a/regi/Pages/Produktion.html
+++ b/regi/Pages/Produktion.html
@@ -8,10 +8,10 @@
 <body style="background:rgb(206, 154, 64)">
     <h1>Produktion</h1>
     <ul>
-        <li><a href="/">Haputseite</a></li>
+        <li><a href="D:\ifksp\html_proba\Eszma.github.io\index.html">Haputseite</a></li>
         <li><a target="blank" href="Produktion.html">Produktion</a></li>
         <li><a target="blank" href="ORders.html">Bestellung</a></li>
-        <li><a target="blank" href="./about.html">About</a></li>
+        <li><a target="blank" href="eszma.github.io/about.html">About</a></li>
     </ul>
     
 </body>
