--- a/regi/about.html
+++ b/regi/about.html
@@ -10,10 +10,10 @@
    <h4>About</h4>
   <p>Ez egy szokványos oldal, ide nem tudom miket szoktak írni</p>
   <ul>
-    <li><a href="/index.html">Haputseite</a></li>
-    <li><a target="blank" href="/Pages/Produktion.html">Produktion</a></li>
-    <li><a target="blank" href="/Pages/ORders.html">Bestellung</a></li>
-    <li><a target="blank" href="/about.html">About</a></li>
+    <li><a href="D:\ifksp\html_proba\Eszma.github.io\index.html">Haputseite</a></li>
+    <li><a target="blank" href="Pages/Produktion.html">Produktion</a></li>
+    <li><a target="blank" href="Pages/ORders.html">Bestellung</a></li>
+    <li><a target="blank" href="D:\ifksp\html_proba\Eszma.github.io\about.html">About</a></li>
 </ul>
 
 <table>
