--- a/regi/valogatni/Pages/ORders.html
+++ b/regi/valogatni/Pages/ORders.html
@@ -9,10 +9,10 @@
     <h1>Orders</h1>
     <p><a href="/Pages/Produktion.html">Zu der Produktion</a></p>
     <ul>
-        <li><a href="/">Haputseite</a></li>
-        <li><a target="blank" href="Pages/Produktion.html">Produktion</a></li>
-        <li><a target="blank" href="Pages/ORders.html">Bestellung</a></li>
-        <li><a target="blank" href="./about.html">About</a></li>
+        <li><a href="/index.html">Haputseite</a></li>
+        <li><a target="blank" href="/Pages/Produktion.html">Produktion</a></li>
+        <li><a target="blank" href="/Pages/ORders.html">Bestellung</a></li>
+        <li><a target="blank" href="/about.html">About</a></li>
     </ul>
     
 </body>
