--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <p> <em>Sehr wichtige </em><strong>Information. ez egy inline elem, de a p: már blokk elem
 </strong>Mit em und strong.</p>
-<p> <i>Sehr wichtige </i><b>Information.
+<p> <i>Sehr wichtige </i><b>Information. Wir wissen das.
 </b>Mit i und b.</p>
 <p><a href="about.html">Zur dem About seite</a></p>
 <p><a href="Pages/ORders.html">Zu der Orders</a></p>
