--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bambi Hambi</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <p id="Bambi"><a  href="/">Bambi Hambi</a></p>
 <a target="blank" href="Pages/Produktion.html">Produktion</a></li>
