--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/pages/bootstrap/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>Bambi Hambi Kontakt</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/index.html">Bambi Hambi</a>
@@ -35,76 +35,37 @@
       </form>
     </div>
   </nav>
-<body style="background:rgb(206, 154, 64)">
-    
-   <h4>About</h4>
-  <p>Ez egy szokványos oldal, ide nem tudom miket szoktak írni</p>
-  <ul>
-    <li><a href="/index.html">Haputseite</a></li>
-    <li><a target="blank" href="/pages/produktion.html">Produktion</a></li>
-    <li><a target="blank" href="/pages/orders.html">Bestellung</a></li>
-    <li><a target="blank" href="/about.html">About</a></li>
-</ul>
-
-<table>
-    <caption>Öffnungzeiten</caption>
-    <thead>
-        <tr>
-            <th>Tag</th>
-            <th>Öffnungen</th>
-            <th>Schlißen</th>
-
-        </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>Montag-Donnerstag:</td>
-        <td rowspan="2">09:00</td>
-        <td>21:00</td>
-    </tr>
-    <tr>
-        <td>Freitag-Samstag:</td>
-        
-        <td>24:00</td>
-    </tr>    
-    <tr>
-        <td>Sonntag und Feiertag:</td>
-        <td colspan="2">geschloßen</td>
-     </tr>  
-    </tr>
-</tbody>
-<tfoot>
-  <tr>
-      <td colspan="3">  
-    &copy;2020
-</td>
-</tr>
-</tfoot>
-</table>
-  
- 
-   <p>Innentől kezdve kipróbáljuk az oldalon belüli linkek  használatát.</p>
-<p>Induljon a móka!</p>
-<p>Menjünk mind a tóba!</p>
-<p>Mártózzunk meg gyorsan,</p>
-<p>Így kipírjuk a napot.</p>
-
-
-<p>Induljon a móka!</p>
-<p>Menjünk mind a tóba!</p>
-<p>Mártózzunk meg gyorsan,</p>
-<p>Így kipírjuk a napot.</p>
-<h2 id="content">Content</h2>
-
-<p>Induljon a móka!</p>
-<p>Menjünk mind a tóba!</p>
-<p>Mártózzunk meg gyorsan,</p>
-<p>Így kipírjuk a napot.</p>
-
-
-
-
-about.html#content ez egy link lehetőségS
-
+  <body id="bgr" style="background:rgb(206, 154, 64, 0.92)">
+    <h>Kontakt</h>
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <div class="alert alert-primary" role="alert">
+            Lesen Sie den Text, bitte! <a href="#" class="alert-link"></a>
+          </div>
+          <div class="alert alert-secondary" role="alert">
+            2 für 3 Schnäppchen <a href="#" class="alert-link"></a>
+          </div>
+          <div class="alert alert-success" role="alert">
+            Erledigt. <a href="#" class="alert-link"></a>
+          </div>
+          <div class="alert alert-danger" role="alert">
+            Das System ist kaput geworden.<a href="#" class="alert-link"></a>
+          </div>
+          <div class="alert alert-warning" role="alert">
+            Vielliecht nicht alle Daten ist erreichbar.<a href="#" class="alert-link"></a>
+          </div>
+          <div class="alert alert-info" role="alert">
+            Das System arbeitet perfekt. <a href="#" class="alert-link"></a>
+          </div>
+          <div class="alert alert-light" role="alert">
+             <a href="#" class="alert-link"></a>
+          </div>
+          <div class="alert alert-dark" role="alert">
+            Dunkel<a href="#" class="alert-link"></a>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
