--- a/Pages/login.html
+++ b/Pages/login.html
@@ -35,76 +35,30 @@
       </form>
     </div>
   </nav>
-<body style="background:rgb(206, 154, 64)">
-    
-   <h4>About</h4>
-  <p>Ez egy szokványos oldal, ide nem tudom miket szoktak írni</p>
-  <ul>
-    <li><a href="/index.html">Haputseite</a></li>
-    <li><a target="blank" href="/pages/produktion.html">Produktion</a></li>
-    <li><a target="blank" href="/pages/orders.html">Bestellung</a></li>
-    <li><a target="blank" href="/about.html">About</a></li>
-</ul>
+  <body style="background:rgb(206, 154, 64)">
+    <div class="container">
+        <div class="row">
+            <div class="col-4"></div>
+            <form class="form-horizontal">
+                <div class="form-group">
+                  <label for="exampleInputEmail1">Email Address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" value="kolompar.winetou@sanyika.hu" readonly>
+                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Passwort</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="form-group form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Senden</button>
+              </form>
+            <div class="col-4">
 
-<table>
-    <caption>Öffnungzeiten</caption>
-    <thead>
-        <tr>
-            <th>Tag</th>
-            <th>Öffnungen</th>
-            <th>Schlißen</th>
-
-        </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>Montag-Donnerstag:</td>
-        <td rowspan="2">09:00</td>
-        <td>21:00</td>
-    </tr>
-    <tr>
-        <td>Freitag-Samstag:</td>
-        
-        <td>24:00</td>
-    </tr>    
-    <tr>
-        <td>Sonntag und Feiertag:</td>
-        <td colspan="2">geschloßen</td>
-     </tr>  
-    </tr>
-</tbody>
-<tfoot>
-  <tr>
-      <td colspan="3">  
-    &copy;2020
-</td>
-</tr>
-</tfoot>
-</table>
-  
- 
-   <p>Innentől kezdve kipróbáljuk az oldalon belüli linkek  használatát.</p>
-<p>Induljon a móka!</p>
-<p>Menjünk mind a tóba!</p>
-<p>Mártózzunk meg gyorsan,</p>
-<p>Így kipírjuk a napot.</p>
-
-
-<p>Induljon a móka!</p>
-<p>Menjünk mind a tóba!</p>
-<p>Mártózzunk meg gyorsan,</p>
-<p>Így kipírjuk a napot.</p>
-<h2 id="content">Content</h2>
-
-<p>Induljon a móka!</p>
-<p>Menjünk mind a tóba!</p>
-<p>Mártózzunk meg gyorsan,</p>
-<p>Így kipírjuk a napot.</p>
-
-
-
-
-about.html#content ez egy link lehetőségS
-
+            </div>
+        </div>
+    </div>
 </body>
 </html>
