--- a/index.html
+++ b/index.html
@@ -3,13 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/pages/bootstrap/css/bootstrap.min.css">
     <title>Bambi Hambi</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
-<p id="Bambi"><a  href="/">Bambi Hambi</a></p>
-<a target="blank" href="Pages/Produktion.html">Produktion</a></li>
-<a target="blank" href="Pages/ORders.html">Bestellung</a>
-<a target="blank" href="about.html">About</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/index.html">Bambi Hambi</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/pages/produktion.html">Produktion<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/pages/orders.html">Bestellung</a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about.html">Über uns</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/contact.html">Kontakt</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/pages/login.html">Login</a>
+          </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
 <body id="bgr" style="background:rgb(206, 154, 64, 0.92)">
     <h1>Bambi Hambi</h1>
      <h3>Megéheztél egy hambira? Jó helyen jársz! h:ez egy blokk elem
@@ -25,8 +51,8 @@
 </div>
 <ul>
     <li><a href="/">Haputseite</a></li>
-    <li><a target="blank" href="Pages/Produktion.html">Produktion</a></li>
-    <li><a target="blank" href="Pages/ORders.html">Bestellung</a></li>
+    <li><a target="blank" href="pages/produktion.html">Produktion</a></li>
+    <li><a target="blank" href="pages/orders.html">Bestellung</a></li>
     <li><a target="blank" href="about.html">About</a></li>
 </ul>
     <h5 id="Hambis-header">Hambis (Unordered List)</h5>
@@ -49,7 +75,7 @@
     <li>Tomato</li>
     <li>Pommes</li>
 </ol>
-<a target="blank" href="Pages/ORders.html">ORders</a>
+<a target="blank" href="pages/orders.html">Orders</a>
 <h5>Schritt der Bestellung (Ordered List)</h5>
  <ol>
     <li>Wählen Sie die Hambis!</li>
@@ -77,7 +103,7 @@
 <p> <i>Sehr wichtige </i><b>Information. Wir wissen das.
 </b>Mit i und b.</p>
 <p><a href="about.html">Zur dem About seite</a></p>
-<p><a href="Pages/ORders.html">Zu der Orders</a></p>
+<p><a href="Pages/orders.html">Zu der Orders</a></p>
  
 
 </body>
