--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <img src="img/limonade.jpg">
 </div>
 <ul>
-    <li><a href="/">Haputseite</a></li>
+    <li><a href="/">Hauptseite</a></li>
     <li><a target="blank" href="pages/produktion.html">Produktion</a></li>
     <li><a target="blank" href="pages/orders.html">Bestellung</a></li>
     <li><a target="blank" href="about.html">About</a></li>
