--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
             <ul>
                 <li><a id="nav-intro">Daten</a></li>
                 <li><a id="nav-about">Kontakt</a></li>
-                <li><a>Ausbildungen</a></li>
-                <li><a>Arbeit</a></li>
-                <li><a>Interesse</a></li>
+                <li><a id="nav-school">Ausbildungen</a></li>
+                <li><a id="nav-work">Arbeit</a></li>
+                <li><a id="nav-interest">Interesse</a></li>
             </ul>
         </nav>
     </header>
     <section id="intro">
-        <div id="profile"><img src="/profile.jpg" alt="Eszter Szabó"></div>
+        <div id="profile"><img src="/profile2.jpg" alt="Eszter Szabó"></div>
         <div id="details">
             <h1>Eszter Szabó</h1>
             <h3>Kantorin</h3>
             <dl>
-                <dt>Alt</dt>
+                <dt>Alter</dt>
                 <dd>25</dd>
                 <dt>E-Mail</dt>
                 <dd>szabeszter&#x40;gmail.com</dd>
-                <dt>Adress</dt>
-                <dd>Waisenhausstraße 46A 80637, München</dd>
+                <dt>Adresse</dt>
+                <dd>Waisenhausstr. 46A 80637, München</dd>
                 <dt>Telefon</dt>
-                <dd>+49 175 785 54 25 </dd>
+                <dd>+49 175 3417338 </dd>
                 <dt>Nationalität</dt>
                 <dd>ungarisch</dd>
             </dl>
@@ -52,18 +52,10 @@
     </section>
     <section id="about">
         <h1>Über mich</h1>
-        <p>Átképzetem magam ennek anak, mert minden érdekel. Bő egy éve vagyok itt, és szeretném kihasználni az itteni ehetőségeket.
-            ECT.......................................
+        <p>Nachdem ich in 2019 nach München zog, habe ich mich sofort als Verkäuferin engagiert, zuerst im Taxisgarten und danach bei Max Rischart's Backhaus. Nun habe ich einen online IT Kurs belegt, und bin auf der Suche nach einem Job der mich intellektuell etwas mehr herausfordert.
         </p>
-        <p>
-
-        </p>
-        <dl>
-            <dt>Alt</dt><dd>25</dd>
-            <dt>E-Mail</dt><dd>szabeszter&#x40;gmail.com</dd>
-        </dl>
     </section>
-    <section>
+    <section id="school">
         <h1>Ausbildungen</h1>
         <h3>Schule</h3>
         <dl>
@@ -78,51 +70,79 @@
             <dt>2017</dt><dd>englich TELC B2</dd>
         </dl>
     </section>
-    <section>
-        <h1>Arbeit</h1>
-        <dl>
-            <dt>2019-2020</dt><dd>Rischart</dd>
-            <p>Nach der Saison habe ich bei Max Rischart’s Backhaus im Ostbahnhof als Verkäuferin von Mitte November bis in Mitte Mai (trotz Einschränkungen) gearbeitet.
-                 Meine Aufgabe war es die feinsten Backwaren schön einzupacken, die Kasse zu behandeln und Bestellungen aufzunehmen. Ich habe die Kunden nett betreut und konnte mit meinen Mitarbeitern gut zusammenarbeiten.
-                  Der Ostbahnhof ist der verkehrsreichste Bahnhof in München, deswegen lernte ich schnell und pünktlich zu arbeiten. </p>
-            <dt>2019</dt><dd>Taxisgarten</dd>
-            <p>Im Juli 2019 bin ich nach München gezogen, und habe kurzfristig einen Job als Kassenhilfskraft im Taxisgarten erworben.
-                 Die Arbeit war saisonal und mein Vertrag dauerte bis Ende Oktober.</p>
-            
-        </dl>
-    </section>
-    <section>
-        <h1>Interesse</h1>
-        <p>Musik</p>
-        <p>Seit Oktober 2015 war ich auch Kantorin und alleinige Chorleiterin der Evangelischen Gemeinde Csillaghegy. In der Gemeinde habe ich im Jahr 2018 im Kauf einer neuen Orgel signifikante Arbeit zugetragen: Preisanfragen erstellt, technische Eigenschaften und Klang von ähnlichen Orgeln im Umkreis verglichen, Kontakte gehalten, und das Musikalische Leben auf höheres Niveau gesetzt.
-Ich bin Mitgründerin und Mitchorleiterin eines kleinen achtköpfigen Kammerchors namens „Schwalbe“.</p>
-
-    </section>
     <section id="timeline">
         <div class="timeline">
             <div class="container left">
                 <div class="content">
                     <h2>2020</h2>
                     <p>Web-Entwickler Kurs</p>
-                    <p>online Unterrichte, 20 Stunden, ausgezeignete Ergebnis</p>
+                    <p>Online Unterrichte, 30 Stunden, ausgezeignetes Ergebnis</p>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
                     <h2>2020</h2>
+                    <p>Deutsche Sprachprüfung</p>
                     <p>Goethe Zertifikat B2</p>
-                    <p>ausgezeignete Ergebnis</p>
+                    <p>Ausgezeignetes Ergebnis</p>
                 </div>
             </div>
             <div class="container left">
                 <div class="content">
                 <h2>2019</h2>
-                <p>Lorem ipsum..</p>
+                <p>Musikfachschule</p>
+                <p>Kirchenmusik fach</p>
+                <p>Kodály Zoltán Chorschule, Budapest</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>2017</h2>
+                    <p>Englische Sprachprüfung</p>
+                    <p>TELC englisch B2</p>
+                    <p>Ausgezeignete Ergebnis</p>
+                </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <h2>2017</h2>
+                    <p>Bachler Diplom</p>
+                    <p>Grundschullehrerfach</p>
+                    <p>ELTE Universität, Budapest</p>
                 </div>
             </div>
         </div> 
     </section>
+    <section id="work">
+        <h1>Arbeit</h1>
+        <dl>
+            <dt>2019-2020</dt><dd>Rischart</dd>
+            <p>Ich habe bei Max Rischart’s Backhaus im Ostbahnhof als Verkäuferin von Mitte November bis in Mitte Mai (trotz Einschränkungen) gearbeitet.
+                 Meine Aufgabe war es die feinsten Backwaren schön einzupacken, die Kasse zu behandeln und Bestellungen aufzunehmen. Ich habe die Kunden nett betreut und konnte mit meinen Mitarbeitern gut zusammenarbeiten.
+                  Der Ostbahnhof ist der verkehrsreichste Bahnhof in München, deswegen lernte ich schnell und pünktlich zu arbeiten. </p>
+            <dt>2019</dt><dd>Taxisgarten</dd>
+            <p>Im Juli 2019 bin ich nach München gezogen, und habe kurzfristig einen Job als Kassenhilfskraft im Taxisgarten erworben.
+                 Die Arbeit war saisonal und mein Vertrag dauerte bis Ende Oktober. Das Team im Taxisgarten war sehr freundlich und hilfsbereit trozt meinen anfangs fehlenden Deutschkentnissen. Während meiner Zeit im Biergarten habe ich viele schöne Erinnerungen gesammelt!</p>
+            
+        </dl>
+    </section>
+    <section id="interest">
+        <h1>Interesse</h1>
+        <dt>Musik</dt><dd>Chor</dd>
+        <p>Seit Oktober 2015 war ich gleichzeitig Kantorin und alleinige Chorleiterin der Evangelischen Gemeinde Csillaghegy in Budapest. In der Gemeinde habe ich im Jahr 2018 im Kauf einer neuen Orgel signifikante Arbeit zugetragen: Preisanfragen erstellt, technische Eigenschaften und Klang von ähnlichen Orgeln im Umkreis verglichen,
+             Kontakte gehalten, und das Musikalische Leben auf höheres Niveau gesetzt.</p>
+        <p>Ich bin Mitgründerin und Mitchorleiterin eines kleinen achtköpfigen Kammerchors namens „Schwalbe“. Wir sind nicht nur Mitglieder, sondern auch Freunde. Auf unseren bisherigen Konzerten haben wir sehr positive Rückmeldungen erworben.</p>
+
+    </section>
     <footer>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+
+        </nav>
 
     </footer>
 
