extended about page and social links

--- a/fecske/pages/members.html
+++ b/fecske/pages/members.html
@@ -4,34 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fecske tagok</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="/pages/members.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/fecske/pages/members.css">
 </head>
 <body>
     <header>
-        <div id="home"><a href="/index.html">Fecske kamarakórus</a></div>
+        <div id="home"><a href="/fecske/index.html">Fecske kamarakórus</a></div>
         <nav>
             <ul>
-                <li><a href="/pages/about.html">Bemutatkozás</a></li>
-                <li><a href="/pages/koncert.html">Koncertek</a></li>
-                <li><a href="/pages/members.html">Tagok</a></li>
-                <li><a href="/pages/repertoar.html">Repertoar</a></li>
-                <li><a href="/pages/forMembers.html">Tagoknak</a></li>
+                <li><a href="/fecske/pages/about.html">Bemutatkozás</a></li>
+                <li><a href="/fecske/pages/koncert.html">Koncertek</a></li>
+                <li><a href="/fecske/pages/members.html">Kórustagok</a></li>
+                <li><a href="/fecske/pages/repertoar.html">Repertoar</a></li>
             </ul>
         </nav>
     </header>
+    <section id="proba">
+        <div>
+            <h1>Próbák</h1>
+            <p>Időpont: csütörtök/péntek 18:00-20:00</p>
+            <p>Helyszín: Közben Stúdió</p>
+            <p>Ráday utca 31/B (Kapucsengő/Buzz: 164 - KÖZBEN STÚDIÓ)
+                Budapest IX. kerülete</p>
+        </div>
+    </section>
+    <section id="jel">
+        <div>
+            <h1>Szeretnél énekelni, de még nincs helyed?</h1>
+            <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
+            <p>Várunk a kórusunkban!</p>
+        </div>
+    </section>
     <section>
         <div id="members"></div>
-        <h3>Fiókák</h3>
-        <p>Eszter</p>
-        <p></p>
+        <h1>Fiókák</h1>
         <p>Andi</p>
-        
+        <p>Anna</p>
+        <p>Betti</p>
+        <p>Dóri</p>
+        <p>Emma</p>
+        <p>Eszter</p>
+        <p>Gábor</p>
+        <p>Hajni</p>
+        <p>Juli</p>
+        <p>Sára</p>
+        <p>Szabi</p>
+        <p>Vanda</p>
     </section>
-    <section>
-        <div id=""></div>
-    </section>
-    <footer>
-        ?
+
+    <footer id="footer">
+        <div>
+            <p>Kövesss minket! Csatlakozz hozzánk!</p>
+        </div>
     </footer>
 </body>
 </html>
