--- a/fecske/pages/repertoar.html
+++ b/fecske/pages/repertoar.html
@@ -4,26 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fecske repertoar</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="/pages/repertoar.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/fecske/pages/repertoar.css">
 </head>
 <body>
     <header>
-        <div id="home"><a href="/index.html">Fecske kamarakórus</a></div>
+        <div id="home"><a href="/fecske/index.html">Fecske kamarakórus</a></div>
         <nav>
             <ul>
-                <li><a href="/pages/about.html">Bemutatkozás</a></li>
-                <li><a href="/pages/koncert.html">Koncertek</a></li>
-                <li><a href="/pages/members.html">Tagok</a></li>
-                <li><a href="/pages/repertoar.html">Repertoar</a></li>
-                <li><a href="/pages/forMembers.html">Tagoknak</a></li>
+                <li><a href="/fecske/pages/about.html">Bemutatkozás</a></li>
+                <li><a href="/fecske/pages/koncert.html">Koncertek</a></li>
+                <li><a href="/fecske/pages/members.html">Kórustagok</a></li>
+                <li><a href="/fecske/pages/repertoar.html">Repertoar</a></li>
             </ul>
         </nav>
     </header>
+    <section>
+        <div id="proba">
+            <h1>Próbák</h1>
+            <p>Időpont: csütörtök/péntek 18:00-20:00</p>
+            <p>Helyszín: Közben Stúdió</p>
+        </div>
+    </section>
     <section>
         <div id=""></div>
     </section>
     <section>
         <div id=""></div>
+    </section>
+    <section>
+        <div id="jelenkezés">
+            <h1>Szeretnél énekelni, de még nincs helyed?</h1>
+            <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
+            <p>Várunk a kórusunkban!</p>
+        </div>
     </section>
     <footer>
         ?
