--- a/fecske/index.html
+++ b/fecske/index.html
@@ -4,29 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fecske kamarakórus</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/fecske/style.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <header>
-        <div id="home"><a href="/index.html">Fecske kamarakórus</a></div>
+        <div id="home"><a href="/fecske/index.html">Fecske kamarakórus</a></div>
         <nav>
             <ul>
-                <li><a href="/pages/about.html">Bemutatkozás</a></li>
-                <li><a href="/pages/koncert.html">Koncertek</a></li>
-                <li><a href="/pages/members.html">Tagok</a></li>
-                <li><a href="/pages/repertoar.html">Repertoar</a></li>
-                <li><a href="/pages/forMembers.html">Tagoknak</a></li>
+                <li><a href="/fecske/pages/about.html">Bemutatkozás</a></li>
+                <li><a href="/fecske/pages/koncert.html">Koncertek</a></li>
+                <li><a href="/fecske/pages/members.html">Kórustagok</a></li>
+                <li><a href="/fecske/pages/repertoar.html">Repertoar</a></li>
             </ul>
         </nav>
     </header>
-    <section>
-        <div id=""></div>
+    <section id="parent">
+        <div class="box-intro" id="igen">fecske kamarakórus
+        </div>
     </section>
     <section>
-        <div id=""></div>
+        <div id="random-content">
+            <img id="body-img"src="/fecske/fecske-drot.jpg">
+        </div>
+
     </section>
     <footer>
-        ?
+       <p>Csatlakozz! :)</p>
     </footer>
+    <script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
