--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
                 <dt>Nationalität</dt>
                 <dd>ungarisch</dd>
             </dl>
-
         </div>
-        <div></div>
-        <div></div>
     </section>
     <section id="about">
         <h1>Über mich</h1>
@@ -72,9 +69,9 @@
         <h1>Ausbildungen</h1>
         <h3>Schule</h3>
         <dl>
-            <dt>2020</dt><dd><a href="https://ujratervezes.nive.hu/">Web-Entwickler Kurs</a></dd>
-            <dt>2017-2019</dt><dd><a href="https://kzmk.hu/">Kodály Zoltán Musikfachschule, Kirchenmusik</a></dd>
-            <dt>2013-2017</dt><dd><a href="https://www.tok.elte.hu/en/">Grundschullehrerfach, Bachelor Diplom
+            <dt>2020</dt><dd><a href="https://ujratervezes.nive.hu/" target="_blank">Web-Entwickler Kurs</a></dd>
+            <dt>2017-2019</dt><dd><a href="https://kzmk.hu/" target="_blank">Kodály Zoltán Musikfachschule, Kirchenmusik</a></dd>
+            <dt>2013-2017</dt><dd><a href="https://www.tok.elte.hu/en/" target="_blank">Grundschullehrerfach, Bachelor Diplom
                 Hauptfach Mathematik</a></dd>
         </dl>
         <h3>Sprache</h3>
@@ -130,14 +127,14 @@
     <section id="work">
         <h1>Arbeit</h1>
         <h3>2019-2020</h3>
-        <p style="text-align: center"><a href="https://www.rischart.de/">Rischart</a></p>
+        <p style="text-align: center"><a href="https://www.rischart.de/" target="_blank">Rischart</a></p>
         <img src="rischart-herz2.jpeg" />
         <p>Ich habe bei Max Rischart’s Backhaus im Ostbahnhof als Verkäuferin von Mitte November bis in Mitte Mai (trotz Einschränkungen) gearbeitet.
                 Meine Aufgabe war es die feinsten Backwaren schön einzupacken, die Kasse zu behandeln und Bestellungen aufzunehmen. Ich habe die Kunden nett betreut und konnte mit meinen Mitarbeitern gut zusammenarbeiten.
                 Der Ostbahnhof ist der verkehrsreichste Bahnhof in München, deswegen lernte ich schnell und pünktlich zu arbeiten. </p>
         <div class="clear" style="clear:both"></div>
         <h3>2019</h3>
-        <p style="text-align: center"><a href="https://www.taxisgarten.de/">Taxisgarten</a></p>
+        <p style="text-align: center"><a href="https://www.taxisgarten.de/" target="_blank">Taxisgarten</a></p>
         <img src="taxisgarten.fw.png" />
         <p>Im Juli 2019 bin ich nach München gezogen, und habe kurzfristig einen Job als Kassenhilfskraft im Taxisgarten erworben.
                 Die Arbeit war saisonal und mein Vertrag dauerte bis Ende Oktober. Das Team im Taxisgarten war sehr freundlich und hilfsbereit trozt meinen anfangs fehlenden Deutschkentnissen. Während meiner Zeit im Biergarten habe ich viele schöne Erinnerungen gesammelt!</p>
@@ -148,38 +145,36 @@
         <h1>Interesse</h1>
         <h3>Musik</h3><p style="text-align: center">Chor</p>
         <img src="cshgy_vez2.jpg" />
-        <p>Seit Oktober 2015 war ich gleichzeitig Kantorin und alleinige Chorleiterin der <a href="https://www.csillaghegy.parokia.hu/cikk/mutat/aktualis/">Evangelischen Gemeinde Csillaghegy</a> in Budapest. In der Gemeinde habe ich im Jahr 2018 im Kauf einer neuen Orgel signifikante Arbeit zugetragen: Preisanfragen erstellt, technische Eigenschaften und Klang von ähnlichen Orgeln im Umkreis verglichen,
+        <p>Seit Oktober 2015 war ich gleichzeitig Kantorin und alleinige Chorleiterin der <a href="https://www.csillaghegy.parokia.hu/cikk/mutat/aktualis/" target="_blank">Evangelischen Gemeinde Csillaghegy</a> in Budapest. In der Gemeinde habe ich im Jahr 2018 im Kauf einer neuen Orgel signifikante Arbeit zugetragen: Preisanfragen erstellt, technische Eigenschaften und Klang von ähnlichen Orgeln im Umkreis verglichen,
              Kontakte gehalten, und das Musikalische Leben auf höheres Niveau gesetzt.</p>
         <br>
-        <p>Ich bin Mitgründerin und Mitchorleiterin eines kleinen zwölfköpfigen Kammerchors namens <a href="">„Schwalbe“</a>. Wir sind nicht nur Mitglieder, sondern auch Freunde. Auf unseren bisherigen Konzerten haben wir sehr positive Rückmeldungen erworben.</p>
+        <p>Ich bin Mitgründerin und Mitchorleiterin eines kleinen zwölfköpfigen Kammerchors namens <a href=""  target="_blank">„Schwalbe“</a>. Wir sind nicht nur Mitglieder, sondern auch Freunde. Auf unseren bisherigen Konzerten haben wir sehr positive Rückmeldungen erworben.</p>
 
     </section>
     <footer>
-        <nav>
-            <ul>
-                <li>
-                    <a href="https://www.linkedin.com/in/eszter-szab%C3%B3-a081981b7/   " class="social" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ccc" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
-                    </a>
-                </li>
-                <!--<li><a href="">Gmail</a></li>-->
-                <li>
-                    <a href="https://github.com/Eszma" class="social" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ccc" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/eszter.szabo7549185" class="social" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#bebebe" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/esztena/" class="social" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#bebebe" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <ul>
+            <li>
+                <a href="https://www.linkedin.com/in/eszter-szab%C3%B3-a081981b7/   " class="social" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ccc" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+                </a>
+            </li>
+            <!--<li><a href="" target="_blank">Gmail</a></li>-->
+            <li>
+                <a href="https://github.com/Eszma" class="social" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ccc" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/eszter.szabo7549185" class="social" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#bebebe" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/esztena/" class="social" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#bebebe" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+                </a>
+            </li>
+        </ul>
     </footer>
 
 
