new profile pic and backToTop button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <section id="intro">
-        <div id="profile"><img src="/profile2.jpg" alt="Eszter Szabó"></div>
+        <div id="profile"><img src="/newprofile.jpg" alt="Eszter Szabó"></div>
         <div id="details">
             <h1>Eszter Szabó</h1>
             <h3>Kantorin</h3>
@@ -176,7 +176,7 @@
             </li>
         </ul>
     </footer>
-
+    <div id="toTop">Nach oben</div> 
 
     <script type="text/javascript" src="javascript.js"></script>
 
